--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -7,7 +7,7 @@
     <title>frontend</title>
   </head>
   <body>
-    <div id="root" class="bg-slate-900 p-5"></div>
+    <div id="root" class="bg-gray-100 p-9"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
